# ProPatch

./: .gitignore  README.md  ROADMAP.md  build.ps1  profetch.spec  propatch.spec  pyproject.toml  settings.toml
docs/: cli.md  components.md  configuration.md  getting-started.md  gui.md
profetch_gui/: README.md  app.py
profetch_gui/core/: logger.py  manifest.py  settings.py  update_worker.py
profetch_gui/data/: manifest.json
profetch_gui/views/: components_view.py  log_view.py  setup_wizard.py
profetch_gui/widgets/: component_row.py  header.py  tooltip.py
src/profetch/: __init__.py  components.py  config.py  db.py  github.py  installer.py  log.py  main.py  manifest.py  setup.py  ui.py  updater.py
src/profetch/gui/: app.py  worker.py
src/profetch/gui/views/: components_view.py  log_view.py  setup_wizard.py
src/profetch/gui/widgets/: component_row.py  header.py
src/propatch/: __init__.py  components.py  config.py  db.py  installer.py  log.py  main.py  manifest.py  setup.py  ui.py  updater.py
src/propatch/gui/: app.py  worker.py
src/propatch/gui/views/: components_view.py  log_view.py  setup_wizard.py
src/propatch/gui/widgets/: component_row.py  header.py  tooltip.py
